<resources>
    <string name="app_name">Note App</string>
    <string name="logo">Logo</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="or">or</string>
    <string name="welcome_to_notes_app">Welcome To NOTES App</string>
    <string name="biometrics_text">Use biometric login with your fingerprint or face for faster and easier access to your account. Or, you can use a passcode to sign in.</string>
    <string name="use_passcode">Use Passcode</string>
    <string name="sign_in_with_your_fingerprint">Sign In With Your Fingerprint</string>
    <string name="fingerprint_text">Scan Your fingerprint on your phone\'s Fingerprint Scanner</string>
    <string name="sign_in">Sign In</string>
    <string name="scan_your_face_using_your_phone_s_camera">Scan your face using your phone\'s camera</string>
    <string name="sign_in_with_your_face_id">Sign In with your Face Id</string>
    <string name="back">Back</string>
    <string name="welcome">Welcome!</string>
    <string name="fill_your_credentials_to_sign_in">Fill your credentials to Sign In</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="fill_your_credentials_to_sign_up">Fill your credentials to Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="category">Category</string>
    <string name="folder">Folder</string>
    <string name="_1">1</string>
    <string name="favourites">Favourites</string>
    <string name="note">Note</string>
    <string name="_09_41">09:41</string>
    <string name="notes">Notes</string>
    <string name="settings">Settings</string>
    <string name="not_categorized">Not Categorized</string>
    <string name="title">Title</string>
</resources>