<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back"
        android:background="?attr/selectableItemBackground"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:fontFamily="@font/inter_bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/welcome_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fill_your_credentials_to_sign_up"
            android:textSize="14sp"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintTop_toBottomOf="@id/welcome_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/welcome_explanation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_back"
                app:startIconDrawable="@drawable/icon_user">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_transparent_bg"
                    android:hint="@string/name"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_back"
                app:startIconDrawable="@drawable/icon_sms"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_transparent_bg"
                    android:hint="@string/email"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_back"
                app:startIconDrawable="@drawable/icon_phone"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_transparent_bg"
                    android:hint="@string/phone_number"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="text"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_back"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/icon_password"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_transparent_bg"
                    android:hint="@string/password"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:background="@drawable/edit_text_back"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/icon_password"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/edit_text_transparent_bg"
                    android:hint="@string/confirm_password"
                    android:textColor="@color/main_blue"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_regular"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="340dp"
                android:layout_height="60dp"
                android:background="@drawable/button_fill"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/inter_bold"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@id/biometrics_explanation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>