<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/note_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_back"
        android:background="?attr/selectableItemBackground"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_favorite"
            android:contentDescription="@string/favourites"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_trash"
            android:layout_marginHorizontal="20dp"
            android:contentDescription="@string/favourites"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_edit"
            android:contentDescription="@string/favourites"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/category_case"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/note_back"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_no_fill"
            android:layout_margin="5dp">

            <ImageView
                android:id="@+id/note_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/icon_folder"
                android:layout_marginHorizontal="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_categorized"
                android:textSize="16sp"
                android:textColor="@color/main_blue"
                android:fontFamily="@font/inter_regular"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/note_icon"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    
    <TextView
        android:id="@+id/note_title"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/category_case"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_bold"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>