<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        android:textSize="38sp"
        android:fontFamily="@font/inter_bold"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/button_favourites"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/icon_favorite"
        android:layout_marginTop="65dp"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/top_text"
        android:contentDescription="@string/favourites" />

    <ImageView
        android:id="@+id/button_settings"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/icon_settings"
        android:layout_marginTop="65dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_favourites"
        android:contentDescription="@string/settings" />

    <androidx.cardview.widget.CardView
        android:id="@+id/search_case"
        android:layout_width="360dp"
        android:layout_height="50dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/top_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <SearchView
            android:id="@+id/category_search"
            android:layout_width="360dp"
            android:layout_height="50dp"/>

    </androidx.cardview.widget.CardView>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_case"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            tools:listitem="@layout/item_category_name"
            android:layout_marginEnd="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_folder"
            android:background="@drawable/button_no_fill"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="360dp"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_note"
        android:layout_marginTop="220dp"
        app:layout_constraintTop_toBottomOf="@id/search_case"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>